--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -7,6 +7,8 @@
     </h1>
   <% end%>
   <div>
+    <p class="soldout"> SOLD OUT </p>
+
     <%= button_to add_item_cart_path(product_id: product.id), class: 'btn' ,
     method: :post do %>
       <%= fa_icon "shopping-cart", text: 'Add' %> 
