--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,12 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<header class="page-header">
+  <h1>Admin &raquo; Dashboard</h1>
+</header>
+
+
+
+<ul class="list-group list-group-horizontal-lg">
+  <li class="list-group-item"> Total Products: <%= @product_count %>
+  </li>
+  <li class="list-group-item">Total Categories: <%= @category_count %>
+  </li>
+</ul>
